<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/input"
        android:textSize="29sp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/instructions"
        android:textSize="29sp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
        android:id="@+id/a"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:hint="@string/a"
        android:textSize="11sp"
        android:gravity="center"
        android:inputType="number|numberDecimal|numberSigned"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintVertical_bias="0.425"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
        android:id="@+id/b"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:hint="@string/b"
        android:textSize="11sp"
        android:gravity="center"
        android:inputType="number|numberDecimal|numberSigned"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.425"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
        android:id="@+id/c"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:hint="@string/c"
        android:textSize="11sp"
        android:gravity="center"
        android:inputType="number|numberDecimal|numberSigned"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintVertical_bias="0.425"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textSize="29sp"
        android:gravity="center"
        android:textColor="#e8d3d3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.55"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/result"
        android:textSize="29sp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.67"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/x1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/x_1"
        android:textSize="29sp"
        android:gravity="left|bottom"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/x2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/x_2"
        android:textSize="29sp"
        android:gravity="left|bottom"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/X_1"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:textSize="29sp"
        android:gravity="left|bottom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintLeft_toLeftOf="@+id/x1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/X_2"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:textSize="29sp"
        android:gravity="left|bottom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintLeft_toLeftOf="@+id/x2"
        app:layout_constraintRight_toRightOf= "parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>